# CoinGecko_API_Service

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mkdocs.yml
.devcontainer/: devcontainer.env  devcontainer.json  post-install.sh
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/docs/: index.md 
backend/docs/api/: endpoints.md  models.md
backend/docs/development/: contributing.md  setup.md
backend/scripts/: init_db.py  path_setup.py
backend/site/: 404.html  index.html
backend/site/api/endpoints/: index.html
backend/site/api/models/: index.html
backend/site/api/overview/: index.html
backend/site/development/contributing/: index.html
backend/site/development/setup/: index.html
backend/site/search/: search_index.json
backend/src/: main.py  models.py  schemas.py
backend/src/api/: coingecko.py  database_operations.py
backend/src/core/: config.py  logging.py  middleware.py
backend/src/database/: create_db.py  models.py  services.py  session.py
backend/src/reporting/: coingecko_reporter.py
backend/src/scripts/: init_db.py
backend/src/transformers/: market_data.py
backend/tests/: confitest.py  conftest.py  test_api.py  test_database_operations.py
docker/: Dockerfile
docs/: index.md
docs/api/: endpoints.md  overview.md
docs/development/: setup.md
