[tool.poetry]
name = "coingecko_api_service"
version = "0.1.0"
description = ""
authors = ["Szymon <goldtown.aik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
httpx = "^0.26.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
polars = "^0.20.6"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
types-pkg-resources = "0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]